src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>GBL_WF_Grupo_Comercial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para la aplicación Workflow, se usa para seleccionar un Giro Comercial del proveedor</description>
        <label>Grupo Comercial</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Grupos Comerciales</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cuentas (Grupo Comercial)</relationshipLabel>
        <relationshipName>Cuentas3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Layout_Minimo_Autorizado__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para capturar el Layout mínimo autorizado</description>
        <label>Layout Mínimo Autorizado</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Listado__c</fullName>
        <description>Campo para la aplicación Workflow, permite hacer una selección de un listado</description>
        <label>Listado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aseguradores</fullName>
                </value>
                <value>
                    <fullName>E-commerce</fullName>
                </value>
                <value>
                    <fullName>Excepciones Raúl</fullName>
                </value>
                <value>
                    <fullName>Grupo 13 (ANTAD)</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>Viajes y Aerolíneas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GBL_WF_Nombre_Custodio_1__c</fullName>
        <description>Campo para la aplicación Workflow, permite capturar un Nombre de Custodio</description>
        <label>Nombre Custodio 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Nombre_Custodio_2__c</fullName>
        <description>Campo para la aplicación Workflow, permite capturar un Nombre de Custodio</description>
        <label>Nombre Custodio 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Propuesta_Unica_De_Valor__c</fullName>
        <description>Campo para la aplicación Workflow, permite capturar la Propuesta Ünica de Valor</description>
        <label>Propuesta Única de Venta (USP)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Ranking__c</fullName>
        <description>Campo para la aplicación Workflow, permite capturar el Ranking del proveedor</description>
        <label>Ranking</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Ranking_Por_Grupo_Comercial__c</fullName>
        <description>Campo para la aplicación Workflow, permite capturar el Ranking por Grupo Comercial del proveedor</description>
        <label>Ranking por Grupo Comercial</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Registro_Duplicado__c</fullName>
        <description>Valida si existe otra Cuenta con el mismo nombre</description>
        <label>Registro Duplicado</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GBL_WF_Squad_Journey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para la aplicación Workflow, que busca y relaciona un Contacto a la Cuenta</description>
        <label>Squad Journey</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Usuarios</value>
            </filterItems>
            <filterItems>
                <field>Contact.GBL_WF_Funcion__c</field>
                <operation>equals</operation>
                <value>Journey</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cuentas (Squad Journey)</relationshipLabel>
        <relationshipName>Cuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Squad_Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para la aplicación Workflow, que busca y relaciona un Contacto a la Cuenta</description>
        <label>Squad Producto</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Usuarios</value>
            </filterItems>
            <filterItems>
                <field>Contact.GBL_WF_Funcion__c</field>
                <operation>equals</operation>
                <value>Producto</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cuentas (Squad Producto)</relationshipLabel>
        <relationshipName>Cuentas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Telefono_Custodio_1__c</fullName>
        <description>Campo para la aplicación Workflow, permite capturar un Teléfono de Custodio</description>
        <label>Teléfono Custodio 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Telefono_Custodio_2__c</fullName>
        <description>Campo para la aplicación Workflow, permite capturar un Teléfono de Custodio</description>
        <label>Teléfono Custodio 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Tier__c</fullName>
        <description>Campo para la aplicación Workflow, permite hacer una selección de TIER</description>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GBL_WF_Tipo_De_Agencia__c</fullName>
        <description>Campo para la aplicación Workflow, permite hacer una selección de Tipo de Agencia</description>
        <label>Tipo de Agencia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Creativa</fullName>
                </value>
                <value>
                    <fullName>Medios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GBL_WF_Usuario_Red_Custodio_1__c</fullName>
        <description>Campo para la aplicación Workflow, permite capturar un Usuario de Red de Custodio</description>
        <label>Usuario Red Custodio 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Usuario_Red_Custodio_2__c</fullName>
        <description>Campo para la aplicación Workflow, permite capturar un Usuario de Red de Custodio</description>
        <label>Usuario Red Custodio 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Vigente__c</fullName>
        <description>Campo para la aplicación Workflow, permite hacer una selección y decir y el registro es Vigente o No</description>
        <label>Vigente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                    <default>true</default>
                    <label>Sí</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <label>GCLID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genero__c</fullName>
        <description>Género del cliente.</description>
        <label>Género</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Masculino</fullName>
                </value>
                <value>
                    <fullName>Femenino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Giro__c</fullName>
        <label>Giro</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Actividad__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CEREALES Y OTROS GRANOS</fullName>
                </value>
                <value>
                    <fullName>HORTALIZAS, LEGUMBRES Y RAICES FECULAS</fullName>
                </value>
                <value>
                    <fullName>FORRAJES</fullName>
                </value>
                <value>
                    <fullName>FRUTAS</fullName>
                </value>
                <value>
                    <fullName>CULTIVOS INDUSTRIALES</fullName>
                </value>
                <value>
                    <fullName>FLORES, ESPECIAS, PLANTAS DE ORNATO Y MEDICINALES</fullName>
                </value>
                <value>
                    <fullName>ARBOLES FRUTALES</fullName>
                </value>
                <value>
                    <fullName>OTROS CULTIVOS</fullName>
                </value>
                <value>
                    <fullName>USUARIOS MENORES DE AGRICULTURA</fullName>
                </value>
                <value>
                    <fullName>SERVICIOS AGRICOLAS</fullName>
                </value>
                <value>
                    <fullName>GANADO BOVINO, CARNE</fullName>
                </value>
                <value>
                    <fullName>GANADO BOVINO, LECHE</fullName>
                </value>
                <value>
                    <fullName>GANADO CABALLAR, MULAR Y ASNAR</fullName>
                </value>
                <value>
                    <fullName>USUARIOS MENORES DE LA GANADERIA</fullName>
                </value>
                <value>
                    <fullName>CRIA Y EXPLOTACION DE GANADO PORCINO</fullName>
                </value>
                <value>
                    <fullName>CRIA Y EXPLOTACION DE GANADO OVINO</fullName>
                </value>
                <value>
                    <fullName>CRIA Y EXPLOTACION DE GANADO CAPRINO</fullName>
                </value>
                <value>
                    <fullName>AVES Y HUEVOS</fullName>
                </value>
                <value>
                    <fullName>APICULTURA</fullName>
                </value>
                <value>
                    <fullName>SUBPRODUCTOS</fullName>
                </value>
                <value>
                    <fullName>PRODUCCION MADERABLE</fullName>
                </value>
                <value>
                    <fullName>PRODUCTOS DE RECOLECCION</fullName>
                </value>
                <value>
                    <fullName>OTROS PRODUCTOS</fullName>
                </value>
                <value>
                    <fullName>PESCA</fullName>
                </value>
                <value>
                    <fullName>ACUACULTURA</fullName>
                </value>
                <value>
                    <fullName>SERVICIOS CONEXOS DE PESCA</fullName>
                </value>
                <value>
                    <fullName>CAZA Y PRESERVACION DE ANIMALES SALVAJES</fullName>
                </value>
                <value>
                    <fullName>EXTRACCION Y BENEFICIO DE CARBON MINERAL Y GRAFITO</fullName>
                </value>
                <value>
                    <fullName>EXPLORACION DE PETROLEO POR COMPANIAS</fullName>
                </value>
                <value>
                    <fullName>EXTRACCION DE PETROLEO CRUDO Y GAS NATURAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grupo_al_que_pertenece__c</fullName>
        <inlineHelpText>Registrar el número del grupo</inlineHelpText>
        <label>Grupo al que pertenece</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mancuerna_Banca_Patrimonial__c</fullName>
        <description>Relaciona el Cliente con el Ejecutivo de la Banca Patrimonial que le vende productos de esa Banca.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mancuerna Banca Patrimonial</label>
        <length>80</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_BCT_Es_Banquero_Contigo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Si esta seleccionado, la cuenta pertenece al programa Banquero Contigo</description>
        <label>¿Es Banquero Contigo?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_BCT_Id_Cliente_Banquero__c</fullName>
        <description>Este campo almacena el Id del Cliente como Id Externo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Id Cliente Banquero</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Motivo_de_no_elegibilidad__c</fullName>
        <description>Motivo de descarte de cliente.</description>
        <label>Motivo de no elegibilidad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Motivo uso comercial</fullName>
                </value>
                <value>
                    <fullName>Uso de taxi</fullName>
                </value>
                <value>
                    <fullName>Mayor a 3.5 toneladas</fullName>
                </value>
                <value>
                    <fullName>Antigüedad</fullName>
                </value>
                <value>
                    <fullName>Fronterizo / legalizado</fullName>
                </value>
                <value>
                    <fullName>Salvamento / Siniestrado</fullName>
                </value>
                <value>
                    <fullName>Auto fuera de Base</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivonointeres__c</fullName>
        <description>Motivo de cliente no interesado.</description>
        <label>Motivo de no</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No contactado</fullName>
                </value>
                <value>
                    <fullName>No molestar</fullName>
                </value>
                <value>
                    <fullName>No interesado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_BPP_CPC_CheckClienteCPC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check para verificar asegurar si el cliente cuenta con un CPC</description>
        <label>¿El cliente cuenta con CPC?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_BPP_DIACUMPLE__c</fullName>
        <description>Dia de cumpleaños</description>
        <formula>DAY(PersonBirthdate)</formula>
        <label>MX_BPP_DIACUMPLE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_GroupItBelongs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relacion de grupo al que pertenece utilizado para Family group para modelo person account en BPyP</description>
        <label>Grupo al que pertenece</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cuentas (Grupo al que pertenece)</relationshipLabel>
        <relationshipName>Cuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Afiliados__c</fullName>
        <label>Afiliados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_PyME_BAI_Cliente__c</fullName>
        <label>BAI Cliente</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_BAI_Segmento__c</fullName>
        <label>BAI del Segmento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Clave_Nomina__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Clave Nómina</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Comisiones__c</fullName>
        <label>Comisiones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Dispersion_nomina__c</fullName>
        <label>% Dispersion de nómina vs mes anterior</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MX_PYME_Flujo_de_Efectivo__c</fullName>
        <label>Flujo de Efectivo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Fondos_Saldo_diario__c</fullName>
        <label>Fondos (Saldo diario)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Fondos_Saldo_mes_anterior__c</fullName>
        <label>Fondos (Saldo mes anterior)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Fondos_Saldo_variacion__c</fullName>
        <label>Fondos (Saldo variación)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Gasto__c</fullName>
        <label>Gasto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Indicador_Ivan__c</fullName>
        <label>Indicador Ivan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Margen_Financiero__c</fullName>
        <label>Margen Financiero</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Matriz_vinculacion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Matriz de vinculación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Monto_total_Captacion__c</fullName>
        <label>Monto total de Captación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Monto_total_creditos__c</fullName>
        <label>Monto total de créditos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Plazo_Saldo_diario__c</fullName>
        <label>Plazo (Saldo diario)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Plazo_Saldo_mes_anterior__c</fullName>
        <label>Plazo (Saldo mes anterior)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Plazo_Saldo_variacion__c</fullName>
        <label>Plazo (Saldo variación)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Porcentaje_Captacion__c</fullName>
        <label>Porcentaje de Captación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Porcentaje_de_credito__c</fullName>
        <label>Porcentaje de crédito</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MX_PyME_prod_cartaCredito__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para saber si el cliente cuenta con producto Carta de Crédito</description>
        <label>Tiene Carta de Crédito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_PyME_prod_nomina__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para saber si el cliente cuenta con producto nómina</description>
        <label>Tiene Nómina</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_PyME_prod_TPV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para saber si el cliente cuenta con producto TPV</description>
        <label>Tiene TPV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Rentabilidad_cliente__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vinculación del cliente (PyME)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_riesgoCom__c</fullName>
        <label>Riesgo comercial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_riesgoPot__c</fullName>
        <label>Riesgo potencial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Saneamiento__c</fullName>
        <label>Saneamiento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_tiene_BCOM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para saber si el cliente cuenta con producto BCOM</description>
        <label>Tiene BCOM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Tiene_impagos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tiene impagos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_PyME_tiene_seguros__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para saber si el cliente cuenta con producto Seguro Auto</description>
        <label>Tiene Seguros</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Total_Credito_Simple__c</fullName>
        <label>Total Crédito Simple</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Total_Otros_Creditos__c</fullName>
        <label>Total Otros Créditos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Total_TDC_Micro_Negocio__c</fullName>
        <label>Total TDC Micro Negocio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Total_TDC_Negocios__c</fullName>
        <label>Total TDC Negocios</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Vista_Saldo_diario__c</fullName>
        <label>Vista (Saldo diario)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Vista_Saldo_mAnterior__c</fullName>
        <label>Vista (Saldo mes anterior)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Vista_Saldo_variacion__c</fullName>
        <label>Vista (Saldo variación)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
	<fields>
        <fullName>MX_SB_BCT_No_Existe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Si esta seleccionado, significa que la cuenta no existe</description>
        <label>No Existe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_CentroEmisor__c</fullName>
        <description>Centro de emisión de la póliza.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Emisor</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_EnvioEncuestaIrene__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Este campo es actualizado desde MC si al cliente se le ha enviado ya una encuesta</description>
        <label>¿Ya se envío encuesta IReNe?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_IncisosContratados__c</fullName>
        <description>Inciso de la póliza.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Inciso</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_InformacionGeneral__c</fullName>
        <formula>&apos;NOMBRE CLIENTE: &apos; + MX_SB_SAC_NombreCompleto__c + &apos; | &apos; + RFC__c + BR() + &apos;----------------------------------------------------------------------------------------------------------------------------------------------&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Informacion General</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_NombreCompleto__c</fullName>
        <description>Nombre completo del cliente.</description>
        <formula>FirstName &amp;&quot; &quot;&amp;  ApellidoPaterno__c &amp;&quot; &quot;&amp;  ApellidoMaterno__c</formula>
        <label>Nombre completo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Tipo__c</fullName>
        <description>Es el tipo de tarjeta del cliente.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tipo de cuenta</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_chk_Bloqueado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Nuevo campo para telemarketing de contratante para identificar si esta bloqueado</description>
        <label>Bloqueado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WB_Cuenta__c</fullName>
        <description>Número enmascarado de cliente.</description>
        <label>Cuenta</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_Delegacion__c</fullName>
        <description>Nuevo campo para almacenar la delegación de telemarketing</description>
        <label>Delegación</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_FechaPolizaAnterior__c</fullName>
        <description>Muestra fecha de vencimiento de póliza anterior de cliente</description>
        <label>FechaPolizaAnterior</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_WB_int_TerminacionTarjeta__c</fullName>
        <description>Últimos cuatro dígitos de la tarjeta.</description>
        <label>Terminación Tarjeta</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_ph_Telefono1__c</fullName>
        <description>Nuevo campo de teléfono para contactabilidad de telemarketing</description>
        <label>Teléfono 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MX_WB_ph_Telefono2__c</fullName>
        <description>Nuevo campo de teléfono para contactabilidad de telemarketing</description>
        <label>Telefono 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MX_WB_ph_Telefono3__c</fullName>
        <description>Nuevo campo de teléfono para contactabilidad de telemarketing</description>
        <label>Telefono 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MX_WB_PolizaAnterior__c</fullName>
        <description>Histórico de póliza para el servicio.</description>
        <label>PolizaAnterior</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_statusBloqueo__c</fullName>
        <description>Tipificación de bloqueo</description>
        <label>Status Bloqueo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bloqueo en base con posibilidad de regreso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_TipoCuenta__c</fullName>
        <description>Relacionado a Telemarketing</description>
        <label>TipoCuenta</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_TipoTelefono1__c</fullName>
        <description>Nuevo campo para identificar el tipo de teléfono para proceso de telemarketing</description>
        <label>Tipo de Teléfono 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_TipoTelefono2__c</fullName>
        <description>Nuevo campo para identificar el tipo de teléfono para proceso de telemarketing</description>
        <label>Tipo de Teléfono 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_TipoTelefono3__c</fullName>
        <description>Nuevo campo para identificar el tipo de teléfono para proceso de telemarketing</description>
        <label>Tipo de Teléfono 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_txt_BCOM__c</fullName>
        <description>&quot;0 = NO tiene el canal1-A = Si cuenta con el canal y esta activo. 1-I = Si cuenta con el canal y esta inactivo por cualquier situación.&quot;</description>
        <label>BCOM</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_BMOV__c</fullName>
        <description>0 = NO tiene el canal1-A = Si cuenta con el canal y esta activo. 1-I = Si cuenta con el canal y esta inactivo por cualquier situación.</description>
        <label>BMOV</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_Clave_Texto__c</fullName>
        <description>Nuevo campo para telemarketing TREADMENCODE generado por affinium en resguardo</description>
        <label>Clave Texto</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_Colonia__c</fullName>
        <description>Nuevo campo de telemarketing para colonia</description>
        <label>Colonia</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_Extension1__c</fullName>
        <description>Nuevo campo para extensión de teléfono de telemarketing</description>
        <label>Extensión 1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_Extension2__c</fullName>
        <description>Nuevo campo para extensión de teléfono de telemarketing</description>
        <label>Extensión 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_Extension3__c</fullName>
        <description>Nuevo campo para extensión de teléfono de telemarketing</description>
        <label>Extensión 3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_NumClienteEnmascarado__c</fullName>
        <description>Nuevo campo para telemarketing 8 DIGITOS ENMASCARADO</description>
        <label>Número Cliente Enmascarado</label>
        <length>8</length>
        <type>Text</type>
    </fields>
</CustomObject>